Carousel on contactUs added

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <div class="col-xs-12 col-sm-9 col-sm-pull-2">
                                 <h1 class="montserrat">Ristorante con Fusion</h1>
                                 <p style="padding:40px;"></p>
-                                <p>Thanks to chain bars pumping out low-grade drinks, happy hours in London can get a bad rep. However, there are plenty of quality establishments offering decent prices at surprisingly decent locations. After all, we have some of the best drinking establishments on the planet, from cocktail bars to good old traditional pubs serving craft beer. Cheers!</p>
+                                <p>Thanks to chain bars pumping out low-grade drinks, happy hours in Belgrade can get a bad rep. However, there are plenty of quality establishments offering decent prices at surprisingly decent locations. After all, we have some of the best drinking establishments on the planet, from lonely bars to good old traditional kafana serving plum brandy. Cheers!</p>
                             </div>
                         </div>
                         <div>
@@ -130,7 +130,7 @@
                             <div class="col-xs-12 col-sm-9 col-sm-pull-2">
                                 <h1 class="montserrat">Ristorante con Fusion</h1>
                                 <p style="padding:40px;"></p>
-                                <p>All-day tapas and cocktail bar open for breakfast, brunch, lunch and dinner. Located in east London, Boceto is the newest addition to a thriving area, offering traditional and contemporary tapas with ingredients sourced from both local and sustainable retailers. We pride ourselves on our ever-changing wines and seasonal cocktails, and we certainly know how to make a mean bloody mary.</p>
+                                <p>All-day tapas and cocktail bar open for breakfast, brunch, lunch and dinner. Confusion is the newest addition to a thriving area, offering traditional and contemporary tapas with ingredients sourced from both local and sustainable retailers. We pride ourselves on our ever-changing wines and seasonal cocktails, and we certainly know how to make a mean bloody mary.</p>
                             </div>
                         </div>              
                     </div>
