--- a/contactus.html
+++ b/contactus.html
@@ -91,22 +91,55 @@
             </div>
         </div>
     </header>
-    <div class="jumbotron">
-        <div class="container">
-            <div class="row row-header">
-                <div class="col-xs-12 col-sm-2 col-sm-push-9">
-                        <p style="padding-bottom: 10px;"></p>
-                        <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="xs-col-12">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="img/hongkongmap.jpg" alt="Map of Hong Kong">
+                            <div class="carousel-caption">
+                                <h3>Hong Kong</h3>
+                                <p>Asia's World City</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/belgrademap.jpg" alt="Map of Belgrade">
+                            <div class="carousel-caption">
+                                <h3>Belgrade Serbia</h3>
+                                <p>Feel your heart beat</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/losangelesmap.jpg" alt="Map of Los Angeles">
+                            <div class="carousel-caption">
+                                <h3>Los Angeles</h3>
+                                <p>The Entertainment Capital of the World</p>
+                            </div>
+                        </div>
                     </div>
-                <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                    <h1 class="montserrat">Ristorante con Fusion</h1>
-                    <p style="padding:40px;"></p>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="container">
         <div class="row row-content-breadcrumbs">
             <div class="col-xs-12">
