--- a/contactus.html
+++ b/contactus.html
@@ -136,6 +136,10 @@
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <div class="btn-group" id="carouselButtons" role="group" aria-label="Buttons for play/stop">
+                        <button type="button" id="pauseButton" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
+                        <button type="button" id="playButton" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -279,7 +283,8 @@
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <!-- The email address usually opens up on the default email client on the user's computer which they might not use. This defeats the whole purpose. Providing your email address in your Web page directly as text or a hyperlink will expose your email address. Bots or spam crawlers can be used to search the Web to pick up email addresses for spam. You should avoid this if possible and use contact forms instead. -->                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                        <!-- The email address usually opens up on the default email client on the user's computer which they might not use. This defeats the whole purpose. Providing your email address in your Web page directly as text or a hyperlink will expose your email address. Bots or spam crawlers can be used to search the Web to pick up email addresses for spam. You should avoid this if possible and use contact forms instead. -->
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
@@ -293,6 +298,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        // Carousel buttons play / stop
+        $("#pauseButton").click(function() {
+            $(".carousel").carousel('pause');
+            console.info("#pauseButton");
+        });
+
+        $("#playButton").click(function() {
+            $(".carousel").carousel("cycle");
+            console.info("Play Button");
+        });
+    </script>
+
 </body>
 
 </html>
