Used less preprocesor for css / mystyle.less

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- Slick Carousel -->
     <link rel="stylesheet" href="js/slick/slick.css">
     <link rel="stylesheet" href="js/slick/slick-theme.css">
-    <link href="css/style.css" rel="stylesheet">
+
+    <link href="css/mystyle.css" rel="stylesheet">
         <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 
