Added bower bootstrap social, changed links and small changes on footer icons

--- a/contactus.html
+++ b/contactus.html
@@ -11,8 +11,8 @@
         <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/font-awesome.min.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/bootstrap-social.css" rel="stylesheet">
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
     <link href="css/mystyle.css" rel="stylesheet">
         <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
@@ -280,11 +280,11 @@
                     <div style="padding: 40px 10px;">
                         <a class="btn btn-social-icon btn-linkedin" href="https://rs.linkedin.com/in/igor-todorovic-14b2a766" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/igor.todorovic.96" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
                         <!-- The email address usually opens up on the default email client on the user's computer which they might not use. This defeats the whole purpose. Providing your email address in your Web page directly as text or a hyperlink will expose your email address. Bots or spam crawlers can be used to search the Web to pick up email addresses for spam. You should avoid this if possible and use contact forms instead. -->
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
