added menu page

--- a/index.html
+++ b/index.html
@@ -97,48 +97,48 @@
             </div>
         </div>
     </header>
-        <div class="jumbotron">
-            <div class="container">
-                <div class="row row-header">
-                    <div class="slicky">
-                        <div>
-                            <div class="col-xs-12 col-sm-2 col-sm-push-9">
-                                <p style="padding-bottom: 10px;"></p>
-                                <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
-                            </div>
-                            <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                                <h1 class="montserrat">Ristorante con Fusion</h1>
-                                <p style="padding:40px;"></p>
-                                <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                            </div>
+    <div class="jumbotron">
+        <div class="container">
+            <div class="row row-header">
+                <div class="slicky">
+                    <div>
+                        <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                            <p style="padding-bottom: 10px;"></p>
+                            <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                        </div>
+                        <div class="col-xs-12 col-sm-9 col-sm-pull-2">
+                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <p style="padding:40px;"></p>
+                            <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                        </div>
 
-                        </div>
-                        <div>
-                            <div class="col-xs-12 col-sm-2 col-sm-push-9">
-                                <p style="padding-bottom: 10px;"></p>
-                                <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
-                            </div>
-                            <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                                <h1 class="montserrat">Ristorante con Fusion</h1>
-                                <p style="padding:40px;"></p>
-                                <p>Thanks to chain bars pumping out low-grade drinks, happy hours in Belgrade can get a bad rep. However, there are plenty of quality establishments offering decent prices at surprisingly decent locations. After all, we have some of the best drinking establishments on the planet, from lonely bars to good old traditional kafana serving plum brandy. Cheers!</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="col-xs-12 col-sm-2 col-sm-push-9">
-                                <p style="padding-bottom: 10px;"></p>
-                                <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
-                            </div>
-                            <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                                <h1 class="montserrat">Ristorante con Fusion</h1>
-                                <p style="padding:40px;"></p>
-                                <p>All-day tapas and cocktail bar open for breakfast, brunch, lunch and dinner. Confusion is the newest addition to a thriving area, offering traditional and contemporary tapas with ingredients sourced from both local and sustainable retailers. We pride ourselves on our ever-changing wines and seasonal cocktails, and we certainly know how to make a mean bloody mary.</p>
-                            </div>
-                        </div>              
                     </div>
+                    <div>
+                        <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                            <p style="padding-bottom: 10px;"></p>
+                            <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                        </div>
+                        <div class="col-xs-12 col-sm-9 col-sm-pull-2">
+                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <p style="padding:40px;"></p>
+                            <p>Thanks to chain bars pumping out low-grade drinks, happy hours in Belgrade can get a bad rep. However, there are plenty of quality establishments offering decent prices at surprisingly decent locations. After all, we have some of the best drinking establishments on the planet, from lonely bars to good old traditional kafana serving plum brandy. Cheers!</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                            <p style="padding-bottom: 10px;"></p>
+                            <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                        </div>
+                        <div class="col-xs-12 col-sm-9 col-sm-pull-2">
+                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <p style="padding:40px;"></p>
+                            <p>All-day tapas and cocktail bar open for breakfast, brunch, lunch and dinner. Confusion is the newest addition to a thriving area, offering traditional and contemporary tapas with ingredients sourced from both local and sustainable retailers. We pride ourselves on our ever-changing wines and seasonal cocktails, and we certainly know how to make a mean bloody mary.</p>
+                        </div>
+                    </div>              
                 </div>
             </div>
         </div>
+    </div>
 
 
     <div class="container">
@@ -311,7 +311,7 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutUs.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </nav>
