--- a/menu.html
+++ b/menu.html
@@ -8,12 +8,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: Menu</title>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <!-- Bootstrap -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/mystyle.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,16 +26,211 @@
 </head>
 
 <body>
+    <header>
+        <!-- Main component for a primary marketing message or call to action -->
+        <nav class="navbar-fixed-top navbar-default" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
 
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
+                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo navigating to homepage" title="Fusion Logo" height="25"></a>
+                </div>
+                <div class="collapse navbar-collapse" id="mainNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+                        <li><a href="aboutUs.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About Us</a></li>
+                        <li class="dropdown active">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                             role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> 
+                              Menu 
+                             <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Appetizers</a></li>
+                                <li><a href="#">Main Courses</a></li>
+                                <li><a href="#">Desserts</a></li>
+                                <li><a href="#">Drinks</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Specials</li>
+                                <li><a href="#">Lunch Buffet</a></li>
+                                <li><a href="#">Weekend Brunch</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contactus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>
+                    </ul>
+                    <!-- Login button that opens the modal -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+        <!-- Modal -->
+        <div id="loginModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+            <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Login </h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-inline" method="post">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email" name="email">
+                                <input type="password" class="form-control" placeholder="Password" name="password">
+                            </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="rememberme"> Remember Me
+                                    </label>
+                                </div>
+                                <br><br>
+                                <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
+                                <button type="button" class="btn btn-default btn-sm"
+                       data-dismiss="modal">Cancel</button>
+                            
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="container">
-        <div class="row row-content" >
-            <div class="col-xs-12">
-                <h1>Hello</h1>
+        <div class="row row-content-breadcrumbs">
+        <p style="padding:20px;"></p>
+            <div class="col-xs-12 col-sm-9">
+                <!-- Breadcrumbs -->
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active">Menu</li>
+                </ol>
             </div>
         </div>
     </div>
 
+    <div class="container">
+        <div class="row row-content"
+                      ng-init="
+                         dishes=[
+                         {
+                           name:'Uthapizza',
+                           image: 'img/uthappizza.png',
+                           category: 'mains',
+                           label:'Hot',
+                           price:'4.99',
+                           description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
+                           comment: ''
+                        },
+                        {
+                            name: 'Ćevapi',
+                            image: 'img/cevapi.jpg',
+                            category: 'main',
+                            label:'',
+                            price:'8.25',
+                            description: 'Ćevapi is a grilled dish of minced meat, a type of skinless sausage, found traditionally in the countries of southeastern Europe (the Balkans). They are considered a national dish in Bosnia and Herzegovina and Serbia and are also common in Croatia, Montenegro, Slovenia, as well as in Albania, Republic of Macedonia, Bulgaria, Romania.Ćevapi has its origins in the Balkans during the Ottoman period, and represents a regional speciality similar to the kofte kebab.',
+                            comment:''
+                        },
+                        {
+                           name:'Zucchipakoda',
+                           image: 'img/zucchipakoda.png',
+                           category: 'appetizer',
+                           label:'',
+                           price:'1.99',
+                           description:'Deep fried Zucchini coated with mildly spiced Chickpea flour batter accompanied with a sweet-tangy tamarind sauce',
+                           comment: ''
+                        },
+                        {
+                           name:'Vadonut',
+                           image: 'img/vadonut.png',
+                           category: 'appetizer',
+                           label:'New',
+                           price:'1.99',
+                           description:'A quintessential ConFusion experience, is it a vada or is it a donut?',
+                           comment: ''
+                        },
+                        {
+                           name:'ElaiCheese Cake',
+                           image: 'img/elaicheesecake.png',
+                           category: 'dessert',
+                           label:'',
+                           price:'2.99',
+                           description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
+                           comment: ''
+                        }
+                        ]">
+            <div class="col-xs-12">
+                <ul class="media-list">
+                    <li class="media" ng-repeat="dish in dishes">
+                        <div class="media-left media-top">
+                            <a href="#"><img ng-src="{{dish.image}}" alt="Uthapizza" title="Uthapizza" class="media-object img-thumbnail"></a>
+                        </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">{{dish.name}}
+                            <span class="label label-danger">{{dish.label}}</span>
+                            <span class="badge">{{dish.price | currency}}</span>
+                            </h2>
+                            <p>{{dish.description}}</p>
+                            <p>Comments: {{dish.comment}}</p>
+                            <p>Type your comment:</p>
+                                <textarea type="text" ng-model="dish.comment"></textarea>
+                        </div>
+                        <hr>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <footer class="row-footer">
+        <div class="container">
+            <div class="row">          
+                <nav class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutUs.html">About</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="col-xs-6 col-sm-6">
+                    <h5>Our Address</h5>
+                    <address>
+                      121, Clear Water Bay Road<br>
+                      Clear Water Bay, Kowloon<br>
+                      HONG KONG<br>
+                      <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Tel.: +381 60 3881925<br>
+                      <i class="fa fa-fax"></i> Fax: +999 999 4321<br>
+                      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email: <a href="mailto:igor333m@yahoo.com">igor333m@yahoo.com</a>
+                   </address>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <div style="padding: 40px 10px;">
+                        <a class="btn btn-social-icon btn-linkedin" href="https://rs.linkedin.com/in/igor-todorovic-14b2a766" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/igor.todorovic.96" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
+<!-- The email address usually opens up on the default email client on the user's computer which they might not use. This defeats the whole purpose. Providing your email address in your Web page directly as text or a hyperlink will expose your email address. Bots or spam crawlers can be used to search the Web to pick up email addresses for spam. You should avoid this if possible and use contact forms instead. -->
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <p style="padding:10px;"></p>
+                    <p class="center">&copy; Copyright 2015 Ristorante</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="bower_components/angular/angular.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        })
+    </script>
 </body>
 
 </html>
