--- a/aboutUs.html
+++ b/aboutUs.html
@@ -339,7 +339,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutUs.html">About</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
