--- a/contactus.html
+++ b/contactus.html
@@ -262,7 +262,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutUs.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="col-xs-6 col-sm-6">
