--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <nav class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="aboutUs.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
