--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="confusionApp">
 
 <head>
     <meta charset="utf-8">
@@ -112,58 +112,10 @@
     </div>
 
     <div class="container">
-        <div class="row row-content"
-                      ng-init="
-                         dishes=[
-                         {
-                           name:'Uthapizza',
-                           image: 'img/uthappizza.png',
-                           category: 'mains',
-                           label:'Hot',
-                           price:'4.99',
-                           description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
-                           comment: ''
-                        },
-                        {
-                            name: 'Ćevapi',
-                            image: 'img/cevapi.jpg',
-                            category: 'main',
-                            label:'',
-                            price:'8.25',
-                            description: 'Ćevapi is a grilled dish of minced meat, a type of skinless sausage, found traditionally in the countries of southeastern Europe (the Balkans). They are considered a national dish in Bosnia and Herzegovina and Serbia and are also common in Croatia, Montenegro, Slovenia, as well as in Albania, Republic of Macedonia, Bulgaria, Romania.Ćevapi has its origins in the Balkans during the Ottoman period, and represents a regional speciality similar to the kofte kebab.',
-                            comment:''
-                        },
-                        {
-                           name:'Zucchipakoda',
-                           image: 'img/zucchipakoda.png',
-                           category: 'appetizer',
-                           label:'',
-                           price:'1.99',
-                           description:'Deep fried Zucchini coated with mildly spiced Chickpea flour batter accompanied with a sweet-tangy tamarind sauce',
-                           comment: ''
-                        },
-                        {
-                           name:'Vadonut',
-                           image: 'img/vadonut.png',
-                           category: 'appetizer',
-                           label:'New',
-                           price:'1.99',
-                           description:'A quintessential ConFusion experience, is it a vada or is it a donut?',
-                           comment: ''
-                        },
-                        {
-                           name:'ElaiCheese Cake',
-                           image: 'img/elaicheesecake.png',
-                           category: 'dessert',
-                           label:'',
-                           price:'2.99',
-                           description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
-                           comment: ''
-                        }
-                        ]">
+        <div class="row row-content" ng-controller="menuController as menuCtrl"> <!-- menuCtrl is alias -->
             <div class="col-xs-12">
                 <ul class="media-list">
-                    <li class="media" ng-repeat="dish in dishes">
+                    <li class="media" ng-repeat="dish in menuCtrl.dishes">
                         <div class="media-left media-top">
                             <a href="#"><img ng-src="{{dish.image}}" alt="Uthapizza" title="Uthapizza" class="media-object img-thumbnail"></a>
                         </div>
@@ -175,7 +127,7 @@
                             <p>{{dish.description}}</p>
                             <p>Comments: {{dish.comment}}</p>
                             <p>Type your comment:</p>
-                                <textarea type="text" ng-model="dish.comment"></textarea>
+                            <textarea type="text" ng-model="dish.comment"></textarea>
                         </div>
                         <hr>
                     </li>
@@ -230,6 +182,61 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip();
         })
+    </script>
+    <script>
+        var app = angular.module('confusionApp', []);
+
+        app.controller('menuController', function (){
+            var dishes=[
+                         {
+                           name:'Uthapizza',
+                           image: 'img/uthappizza.png',
+                           category: 'mains',
+                           label:'Hot',
+                           price:'4.99',
+                           description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
+                           comment: ''
+                        },
+                        {
+                            name: 'Ćevapi',
+                            image: 'img/cevapi.jpg',
+                            category: 'main',
+                            label:'',
+                            price:'8.25',
+                            description: 'Ćevapi is a grilled dish of minced meat, a type of skinless sausage, found traditionally in the countries of southeastern Europe (the Balkans). They are considered a national dish in Bosnia and Herzegovina and Serbia and are also common in Croatia, Montenegro, Slovenia, as well as in Albania, Republic of Macedonia, Bulgaria, Romania.Ćevapi has its origins in the Balkans during the Ottoman period, and represents a regional speciality similar to the kofte kebab.',
+                            comment:''
+                        },
+                        {
+                           name:'Zucchipakoda',
+                           image: 'img/zucchipakoda.png',
+                           category: 'appetizer',
+                           label:'',
+                           price:'1.99',
+                           description:'Deep fried Zucchini coated with mildly spiced Chickpea flour batter accompanied with a sweet-tangy tamarind sauce',
+                           comment: ''
+                        },
+                        {
+                           name:'Vadonut',
+                           image: 'img/vadonut.png',
+                           category: 'appetizer',
+                           label:'New',
+                           price:'1.99',
+                           description:'A quintessential ConFusion experience, is it a vada or is it a donut?',
+                           comment: ''
+                        },
+                        {
+                           name:'ElaiCheese Cake',
+                           image: 'img/elaicheesecake.png',
+                           category: 'dessert',
+                           label:'',
+                           price:'2.99',
+                           description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
+                           comment: ''
+                        }
+                    ];
+                this.dishes = dishes;
+        });
+        
     </script>
 </body>
 
