--- a/aboutUs.html
+++ b/aboutUs.html
@@ -39,10 +39,10 @@
                               Menu 
                              <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Appetizers</a></li>
-                                <li><a href="#">Main Courses</a></li>
-                                <li><a href="#">Desserts</a></li>
-                                <li><a href="#">Drinks</a></li>
+                                <li><a href="menu.html">Appetizers</a></li>
+                                <li><a href="menu.html">Main Courses</a></li>
+                                <li><a href="menu.html">Desserts</a></li>
+                                <li><a href="menu.html">Drinks</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Specials</li>
                                 <li><a href="#">Lunch Buffet</a></li>
