--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                               Menu 
                              <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Appetizers</a></li>
-                                <li><a href="#">Main Courses</a></li>
-                                <li><a href="#">Desserts</a></li>
-                                <li><a href="#">Drinks</a></li>
+                                <li><a href="menu.html">Appetizers</a></li>
+                                <li><a href="menu.html">Main Courses</a></li>
+                                <li><a href="menu.html">Desserts</a></li>
+                                <li><a href="menu.html">Drinks</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Specials</li>
                                 <li><a href="#">Lunch Buffet</a></li>
@@ -66,7 +66,7 @@
             </div>
         </nav>
 
-        <!-- Modal -->
+        <!-- Modal for ligin button in nav-->
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
             <!-- Modal content-->
