Heading for menu added

--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
     <link href="css/mystyle.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -113,6 +114,7 @@
     </div>
 
     <div class="container">
+        <h2 class="text-center montserrat">Our Menu</h2>
         <div class="row row-content" ng-controller="menuController as menuCtrl"> <!-- menuCtrl is alias -->
             <div class="col-xs-12">
                 <div>
