--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </nav>
 
-        <!-- Modal for ligin button in nav-->
+        <!-- Modal for login button in nav-->
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
             <!-- Modal content-->
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-        <!-- In conststuction modal -->
+        <!-- In conststuction modal called from this page -->
         <div id="inConstruction" class="modal fade" role="dialog">
             <div class="modal-dialog">
             <!-- Modal content-->
@@ -365,7 +365,9 @@
     <script src="js/slick/slick.min.js"></script>
     <script src="js/app.js"></script>
     <script>
+        // Call for modal when the page loads
         $('#inConstruction').modal('show');
+
         $(".slicky").slick({
           fade : true,
           autoplay : false,
