--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
             </div>
         </div>
     </header>
+    <!-- Github button -->
+    <div id="gitButtonDiv">
+        <span>My Github page</span>
+        <a class="btn btn-social-icon btn-lg btn-github" href="https://www.github.com/Igor333m" id="githubButton" target="_blank">
+            <i class="fa fa-github"></i>
+        </a>
+    </div>
+
     <div class="jumbotron">
         <div class="container">
             <div class="row row-header">
