--- a/index.html
+++ b/index.html
@@ -115,11 +115,17 @@
             </div>
         </div>
     </header>
-    <!-- Github button -->
+    <!-- Left side fixed buttons -->
     <div id="gitButtonDiv">
-        <span>My Github page</span>
+        <span>My Github Page</span>
         <a class="btn btn-social-icon btn-lg btn-github" href="https://www.github.com/Igor333m" id="githubButton" target="_blank">
             <i class="fa fa-github"></i>
+        </a>
+    </div>
+        <div id="linkedinButtonDiv">
+        <span>My LinkedIn Page</span>
+        <a class="btn btn-social-icon btn-lg btn-linkedin" href="https://www.github.com/Igor333m" id="linkedinButton" target="_blank">
+            <i class="fa fa-linkedin"></i>
         </a>
     </div>
 
