Added correct link to lenkedin button

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
         <div id="linkedinButtonDiv">
         <span>My LinkedIn Page</span>
-        <a class="btn btn-social-icon btn-lg btn-linkedin" href="https://www.github.com/Igor333m" id="linkedinButton" target="_blank">
+        <a class="btn btn-social-icon btn-lg btn-linkedin" href="https://www.linkedin.com/in/igor-todorovic-14b2a766" id="linkedinButton" target="_blank">
             <i class="fa fa-linkedin"></i>
         </a>
     </div>
