--- a/menu.html
+++ b/menu.html
@@ -100,6 +100,21 @@
             </div>
         </div>
     </header>
+
+        <!-- Left side fixed buttons -->
+    <div id="gitButtonDiv">
+        <span>My Github Page</span>
+        <a class="btn btn-social-icon btn-lg btn-github" href="https://www.github.com/Igor333m" id="githubButton" target="_blank">
+            <i class="fa fa-github"></i>
+        </a>
+    </div>
+        <div id="linkedinButtonDiv">
+        <span>My LinkedIn Page</span>
+        <a class="btn btn-social-icon btn-lg btn-linkedin" href="https://www.linkedin.com/in/igor-todorovic-14b2a766" id="linkedinButton" target="_blank">
+            <i class="fa fa-linkedin"></i>
+        </a>
+    </div>
+    
     <div class="container">
         <div class="row row-content-breadcrumbs">
         <p style="padding:20px;"></p>
