Added translate tag on all pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
-    <title>Ristorante Con Fusion</title>
+    <title translate="no">Ristorante Con Fusion</title>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -140,7 +140,7 @@
                             <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <h1 class="montserrat" translate="no">Ristorante con Fusion</h1>
                             <p style="padding:40px;"></p>
                             <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                         </div>
@@ -152,7 +152,7 @@
                             <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <h1 class="montserrat" translate="no">Ristorante con Fusion</h1>
                             <p style="padding:40px;"></p>
                             <p>Thanks to chain bars pumping out low-grade drinks, happy hours in Belgrade can get a bad rep. However, there are plenty of quality establishments offering decent prices at surprisingly decent locations. After all, we have some of the best drinking establishments on the planet, from lonely bars to good old traditional kafana serving plum brandy. Cheers!</p>
                         </div>
@@ -163,7 +163,7 @@
                             <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                            <h1 class="montserrat">Ristorante con Fusion</h1>
+                            <h1 class="montserrat" translate="no">Ristorante con Fusion</h1>
                             <p style="padding:40px;"></p>
                             <p>All-day tapas and cocktail bar open for breakfast, brunch, lunch and dinner. Confusion is the newest addition to a thriving area, offering traditional and contemporary tapas with ingredients sourced from both local and sustainable retailers. We pride ourselves on our ever-changing wines and seasonal cocktails, and we certainly know how to make a mean bloody mary.</p>
                         </div>
@@ -268,7 +268,7 @@
                         </a>
                     </div>
                     <div class="media-body">
-                        <h2 class="media-heading">Alberto Somayya</h2>
+                        <h2 class="media-heading" translate="no">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                             <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.</p>
                             <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
@@ -350,7 +350,7 @@
                 </nav>
                 <div class="col-xs-6 col-sm-6">
                     <h5>Our Address</h5>
-                    <address>
+                    <address translate="no">
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
