--- a/aboutUs.html
+++ b/aboutUs.html
@@ -128,7 +128,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <main class="container">
             <!-- Breadcrumbs -->
         <div class="row row-content-breadcrumbs">
             <div class="col-xs-12">
@@ -173,11 +173,11 @@
                                         </tr>
                                          <tr>
                                             <th>CEO</th>
-                                            <td>Peter Pan</td>
+                                            <td translate="no">Peter Pan</td>
                                         </tr>
                                         <tr>
                                             <th>Major Stake Holder</th>
-                                            <td>HK Fine Foods Inc.</td>
+                                            <td translate="no">HK Fine Foods Inc.</td>
                                         </tr>
                                         <tr>
                                             <th>Last year's Turnover</th>
@@ -208,33 +208,33 @@
                         <h2>Corporate Leadership</h2>
                         <ul class="nav nav-pills" role="tablist" id="myTabs">
                             <li role="presentation" class="active">
-                                <a href="#peter" aria-controls="home" role="tab" data-toogle="tab">Peter Pan, CEO</a>
+                                <a href="#peter" aria-controls="home" role="tab" data-toogle="tab" translate="no">Peter Pan, CEO</a>
                             </li>
                             <li role="presentation">
-                                <a href="#dhanasekaran" aria-controls="profile" role="tab" data-toogle="tab">D. Witherspoon, Chief F.O.</a>
+                                <a href="#dhanasekaran" aria-controls="profile" role="tab" data-toogle="tab" translate="no">D. Witherspoon, Chief F.O.</a>
                             </li>
                             <li role="presentation">
-                                <a href="#tang" aria-controls="messages" role="tab" data-toogle="tab">A. Tang, C.T.O.</a>
+                                <a href="#tang" aria-controls="messages" role="tab" data-toogle="tab" translate="no">A. Tang, C.T.O.</a>
                             </li>
                             <li role="presentation">
-                                <a href="#somayya" aria-controls="settings" role="tab" data-toogle="tab">A. Somayya, Exec. Chef</a>
+                                <a href="#somayya" aria-controls="settings" role="tab" data-toogle="tab" translate="no">A. Somayya, Exec. Chef</a>
                             </li>
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane fade in active" id="peter">
-                                <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
+                                <h3 translate="no">Peter Pan <small>Chief Epicurious Officer</small></h3>
                                 <p>Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="dhanasekaran">
-                                <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
+                                <h3 translate="no">Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
                                 <p>Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>           
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tang">
-                                <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
+                                <h3 translate="no">Agumbe Tang <small>Chief Taste Officer</small></h3>
                                 <p>Blessed with the most discerning gustatory sense, Agumbe, our CFO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="somayya">
-                                <h3>Alberto Somayya <small>Executive Chef</small></h3>
+                                <h3 translate="no">Alberto Somayya <small>Executive Chef</small></h3>
                                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingOne">
                               <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" translate="no">
                                   121, Clear Water Bay Road Clear Water Bay, Hong Kong
                                 </a>
                               </h4>
@@ -264,7 +264,7 @@
                           <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingTwo">
                               <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" translate="no">
                                   Kralja Aleksandra 189, Belgrade, Serbia
                                 </a>
                               </h4>
@@ -278,7 +278,7 @@
                           <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                               <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" translate="no">
                                   189 The Grove Dr Ste Y-80 Los Angeles, CA 90036
                                 </a>
                               </h4>
@@ -346,7 +346,7 @@
                 </ul>                
             </nav>
         </div>
-    </div>
+    </main>
     <footer class="row-footer">
         <div class="container">
             <div class="row">             
@@ -354,21 +354,21 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#">About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="col-xs-6 col-sm-5">
                     <h5>Our Address</h5>
-                    <address>
+                    <address translate="no">
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
 		              <i class="fa fa-phone"></i>: +381 60 3881925<br>
 		              <i class="fa fa-fax"></i>: +999 999 4321<br>
 		              <i class="fa fa-envelope"></i>: 
-                        <a href="mailto:igor333m@yahoo.com">igor333m@yahoo.com</a>
+                        <a href="mailto:igor333m@yahoo.com" translate="no">igor333m@yahoo.com</a>
 		           </address>
                 </div>
                 <div class="col-xs-6 col-sm-3">
