--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
-    <title>Ristorante Con Fusion: Contact Us</title>
+    <title translate="no">Ristorante Con Fusion: Contact Us</title>
         <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -122,21 +122,21 @@
                         <div class="item active">
                             <img src="img/hongkongmap.jpg" alt="Map of Hong Kong">
                             <div class="carousel-caption">
-                                <h3>Hong Kong</h3>
+                                <h3 translate="no">Hong Kong</h3>
                                 <p>Asia's World City</p>
                             </div>
                         </div>
                         <div class="item">
                             <img src="img/belgrademap.jpg" alt="Map of Belgrade">
                             <div class="carousel-caption">
-                                <h3>Belgrade Serbia</h3>
+                                <h3 translate="no">Belgrade Serbia</h3>
                                 <p>Feel your heart beat</p>
                             </div>
                         </div>
                         <div class="item">
                             <img src="img/losangelesmap.jpg" alt="Map of Los Angeles">
                             <div class="carousel-caption">
-                                <h3>Los Angeles</h3>
+                                <h3 translate="no">Los Angeles</h3>
                                 <p>The Entertainment Capital of the World</p>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
            </div>
             <div class="col-xs-12 col-sm-4 col-sm-offset-1">
                    <h5>Our Address</h5>
-                    <address style="font-size: 100%">
+                    <address style="font-size: 100%" translate="no">
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
@@ -282,7 +282,7 @@
                 </nav>
                 <div class="col-xs-6 col-sm-6">
                     <h5>Our Address</h5>
-                    <address>
+                    <address translate="no">
                       121, Clear Water Bay Road<br>
                       Clear Water Bay, Kowloon<br>
                       HONG KONG<br>
