--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head
          content must come *after* these tags -->
-    <title>Ristorante Con Fusion: Menu</title>
+    <title translate="no">Ristorante Con Fusion: Menu</title>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <!-- Bootstrap -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -185,7 +185,7 @@
                 </nav>
                 <div class="col-xs-6 col-sm-6">
                     <h5>Our Address</h5>
-                    <address>
+                    <address translate="no">
                       121, Clear Water Bay Road<br>
                       Clear Water Bay, Kowloon<br>
                       HONG KONG<br>
