--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <h4 class="modal-title">Under Construction! </h4>
                     </div>
                     <div class="modal-body">
-                        <h3 class="text-primary">This site is under construction. Do not afraid of bugs!</h1>
+                        <h3 class="text-primary">This site is under construction. Do not be afraid of bugs!</h1>
                         <button type="button" class="btn btn-default btn-sm"
                        data-dismiss="modal">Cancel</button>
 
